--- a/Folio/index.html
+++ b/Folio/index.html
@@ -95,7 +95,9 @@
           <a href="#"><i class="bi bi-twitter-x"></i></a>
           <a href="https://www.facebook.com/share/1AiLWLst9z/"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/mayank_patidar_20/"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/mayank-patidar-235397262?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/mayank-patidar-235397262?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+              class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
@@ -126,17 +128,18 @@
             <h1> Web Developer.</h1>
             <p>
               A passionate and dedicated BCA student seeking to apply my technical skills in a dynamic and challenging
-              work environment. Eager to contribute to software development project and  grow in the eld of technologgy. 
+              work environment. Eager to contribute to software development project and grow in the eld of technologgy.
             </p>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <strong>Birthday :</strong> <span> &nbsp;20 July 2004 </span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Experiencer :</strong> <span>&nbsp;Fresher</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone :</strong> <span>&nbsp;9644902004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City :</strong> <span>&nbsp;Indore, India</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age :</strong> <span>&nbsp;20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree :</strong> <span>&nbsp;Bachelor's</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email :</strong> <span>&nbsp;mayankpatidar2220@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance :</strong> <span>&nbsp;Available</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Experiencer :</strong> <span>&nbsp;Fresher</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Phone :</strong> <span>&nbsp;9644902004</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>City :</strong> <span>&nbsp;Indore, India</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Age :</strong> <span>&nbsp;20</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Degree :</strong> <span>&nbsp;Bachelor's</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Email :</strong>
+                <span>&nbsp;mayankpatidar2220@gmail.com</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Freelance :</strong> <span>&nbsp;Available</span></li>
             </ul>
             <span>This section should reflect my personality, highlight my details, and show my enthusiasm.</span>
           </div>
@@ -163,7 +166,8 @@
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
               <h4 class="title">Degree</h4>
-              <p class="description">Bachelor's of computer application from Govt. holkar science college indore, india.</p>
+              <p class="description">Bachelor's of computer application from Govt. holkar science college indore, india.
+              </p>
               <!-- <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i
                   class="bi bi-arrow-right"></i></a> -->
             </div>
@@ -174,8 +178,11 @@
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title">Summary </h4>
-              <p class="description"><h5>Mayank Patidar</h5><h6>Experience : Fresher</h6></p>
-              
+              <p class="description">
+              <h5>Mayank Patidar</h5>
+              <h6>Experience : Fresher</h6>
+              </p>
+
               <!-- <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i
                   class="bi bi-arrow-right"></i></a> -->
             </div>
@@ -185,7 +192,13 @@
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
               <h4 class="title"> skills</h4>
-              <p class="description">This </p>
+              <p class="description">
+                PROGRAMMING LANGUAGE : Javascript, HTML5, <br>
+                FRONTEND : HTML5, CSS, Javascript, Bootstrap, Tailwind CSS, React.js<br>
+                BACKEND : Node.js, Express.js, Mongoose, RESTful API<br>
+                DATABASE : MongoDB<br>
+                TOOLS & PLATFORM : Git, GitHub, Postman, Netlify, Vercel<br>
+              </p>
               <!-- <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i
                   class="bi bi-arrow-right"></i></a> -->
             </div>
@@ -194,6 +207,7 @@
           <!-- <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
+
               <h4 class="title">Magni Dolores</h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                 mollit anim id est laborum</p>
@@ -233,22 +247,22 @@
     <!-- Testimonials Section -->
     <!-- <section id="testimonials" class="testimonials section light-background"> -->
 
-      <!-- Section Title -->
-      <!-- <div class="container section-title" data-aos="fade-up">
+    <!-- Section Title -->
+    <!-- <div class="container section-title" data-aos="fade-up">
         <h2>skills</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div>End Section Title -->
 
-      <!-- Skills Section -->
-    <section id="skills" class="skills section light-background">
+    <!-- Skills Section -->
+    <!-- <section id="skills" class="skills section light-background"> -->
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+    <!-- Section Title -->
+    <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
         <p>This section highlights my skills and progress.</p>
-      </div><!-- End Section Title -->
+      </div>End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <!-- <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row skills-content skills-animation">
 
@@ -259,23 +273,23 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>End Skills Item -->
 
-            <div class="progress">
+    <!-- <div class="progress">
               <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>End Skills Item -->
 
-            <div class="progress">
+    <!-- <div class="progress">
               <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>End Skills Item -->
 
-          </div>
+    <!-- </div>
 
           <div class="col-lg-6">
 
@@ -284,29 +298,29 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div> End Skills Item -->
 
-            <div class="progress">
+    <!-- <div class="progress">
               <span class="skill"><span>WordPress/CMS</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>End Skills Item -->
 
-            <div class="progress">
+    <!-- <div class="progress">
               <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>End Skills Item -->
 
-          </div>
+    <!-- </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Skills Section -->
+    </section>Skills Section -->
 
     <!-- </section>/Testimonials Section -->
 
@@ -331,7 +345,7 @@
             <li data-filter=".filter-books">Books</li>
           </ul><!- End Portfolio Filters -->
 
-          <!-- <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+      <!-- <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
@@ -347,7 +361,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -362,7 +376,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -377,7 +391,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -391,7 +405,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -406,7 +420,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -421,7 +435,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -435,7 +449,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -449,7 +463,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -464,7 +478,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -479,7 +493,7 @@
               </div>
             </div>End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -493,9 +507,9 @@
               </div>
             </div>End Portfolio Item -->
 
-          <!-- </div>End Portfolio Container --> 
+      <!-- </div>End Portfolio Container -->
 
-        </div>
+      </div>
 
       </div>
 
@@ -667,7 +681,7 @@
       <p>.</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/share/1AiLWLst9z/" ><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/share/1AiLWLst9z/"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/mayank_patidar_20/"><i class="bi bi-instagram"></i></a>
         <!-- <a href=""><i class="bi bi-skype"></i></a>
         <a href=""><i class="bi bi-linkedin"></i></a> -->
