--- a/Folio/index.html
+++ b/Folio/index.html
@@ -10,7 +10,7 @@
 
   <!-- Favicons -->
   <!-- <link href="assets/img/favicon.png" rel="icon">` -->
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -345,21 +345,21 @@
             <li data-filter=".filter-books">Books</li>
           </ul><!- End Portfolio Filters -->
 
-      <!-- <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+      <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="/Folio/registration page.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app"
+                  <h1> REGISTRATION APP</h1>
+                  <p>This is a REGISTRATION APP</p>
+                  <a href="/Folio/user details page.png" title="App 1" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div>End Portfolio Item -->
+             </div><!--End Portfolio Item -->
 
       <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
@@ -688,7 +688,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span></span> <strong class="px-1 sitename">Mayank</strong> <span>All Rights Reserved</span>
+          <span></span> <strong class="px-1 sitename">Mayank Patidar</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
