--- a/Folio/index.html
+++ b/Folio/index.html
@@ -138,7 +138,8 @@
               <li><i class="bi bi-chevron-right"></i> <strong>Age :</strong> <span>&nbsp;20</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Degree :</strong> <span>&nbsp;Bachelor's</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Email :</strong>
-                <span>&nbsp;mayankpatidar2220@gmail.com</span></li>
+                <span>&nbsp;mayankpatidar2220@gmail.com</span>
+              </li>
               <li><i class="bi bi-chevron-right"></i> <strong>Freelance :</strong> <span>&nbsp;Available</span></li>
             </ul>
             <span>This section should reflect my personality, highlight my details, and show my enthusiasm.</span>
@@ -347,21 +348,24 @@
 
       <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="/Folio/registration page.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h1> REGISTRATION APP</h1>
-                  <p>This is a REGISTRATION APP</p>
-                  <a href="/Folio/user details page.png" title="App 1" data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-             </div><!--End Portfolio Item -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+          <div class="portfolio-content h-100">
+            <img src="/Folio/registration-page.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h1> REGISTRATION APP</h1>
+              <p>This is a REGISTRATION APP</p>
+              <a href="img/user-details-page.png" title="App 1" data-gallery="portfolio-gallery-app"
+                class="glightbox preview-link">
+                <i class="bi bi-zoom-in"></i>
+              </a>
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                  class="bi bi-link-45deg"></i></a>
+            </div>
+          </div>
+        </div><!--End Portfolio Item -->
+
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -376,7 +380,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -391,7 +395,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -405,7 +409,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -420,7 +424,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -435,7 +439,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -449,7 +453,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -463,7 +467,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -478,7 +482,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -493,7 +497,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -507,7 +511,7 @@
               </div>
             </div>End Portfolio Item -->
 
-      <!-- </div>End Portfolio Container -->
+        <!-- </div>End Portfolio Container -->
 
       </div>
 
