Fixed broken image

--- a/Folio/index.html
+++ b/Folio/index.html
@@ -347,25 +347,26 @@
           </ul><!- End Portfolio Filters -->
 
       <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
           <div class="portfolio-content h-100">
-            <img src="/Folio/registration-page.png" class="img-fluid" alt="">
+            <img src="registration-page.png" class="img-fluid" alt="Registration App">
             <div class="portfolio-info">
-              <h1> REGISTRATION APP</h1>
+              <h1>REGISTRATION APP</h1>
               <p>This is a REGISTRATION APP</p>
-              <a href="img/user-details-page.png" title="App 1" data-gallery="portfolio-gallery-app"
+              <a href="user-details-page.png" title="App 1" data-gallery="portfolio-gallery-app"
                 class="glightbox preview-link">
                 <i class="bi bi-zoom-in"></i>
               </a>
-
-              <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                  class="bi bi-link-45deg"></i></a>
+              <a href="portfolio-details.html" title="More Details" class="details-link">
+                <i class="bi bi-link-45deg"></i>
+              </a>
             </div>
           </div>
-        </div><!--End Portfolio Item -->
+        </div>
+      </div>
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -380,7 +381,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -395,7 +396,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -409,7 +410,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -424,7 +425,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -439,7 +440,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -453,7 +454,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -467,7 +468,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -482,7 +483,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -497,7 +498,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -511,7 +512,7 @@
               </div>
             </div>End Portfolio Item -->
 
-        <!-- </div>End Portfolio Container -->
+      <!-- </div>End Portfolio Container -->
 
       </div>
 
