--- a/Folio/portfolio-details.html
+++ b/Folio/portfolio-details.html
@@ -125,19 +125,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="/Folio/login-img.png" alt="">
+                  <img src="login-img.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="/Folio/registration-page.png" alt="">
+                  <img src="registration-page.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="/Folio/user-page.png" alt="">
+                  <img src="user-page.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="/Folio/user-details-page.png" alt="">
+                  <img src="user-details-page.png" alt="">
                 </div>
 
               </div>
